Atualizações do README e application.properties

--- a/magic-the-gathering/src/main/resources/application.properties
+++ b/magic-the-gathering/src/main/resources/application.properties
@@ -4,7 +4,7 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/magicthegathering
 spring.datasource.username=postgres_user_cartas
 spring.datasource.password=cartas1234
 
-spring.jpa.hibernate.ddl-auto=none
+spring.jpa.hibernate.ddl-auto=create-drop
 
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
